Antes del recuperatorio